# F5-Telemetry-Tracker

./: 0.instancecounter.yaml  1.instancecounter.yaml  2.prometheus.yaml  NGINX-InstanceCounter-dashboard.json  README.md  USAGE.md  nginx-instance-counter
contrib/: README.md
contrib/FastAPI/: .env  README.md  pyproject.toml  pytest.ini
contrib/FastAPI/app/api/: main.py
contrib/FastAPI/app/api/routes/: __init__.py  instances.py  metrics.py  reporting.py
contrib/FastAPI/app/conf/: .env  __init__.py  agent_settings.py  apptypes.py  settings.py  singleton.py
contrib/FastAPI/app/core/: __init__.py  agent.py  tasks.py
contrib/FastAPI/app/core/agents/: bigiq.py  cveDB.py  nim.py  nms.py
contrib/FastAPI/app/core/middleware/: middlewares.py
contrib/FastAPI/app/core/notifiers/: __init__.py  email_notifier.py  push_notifier.py
contrib/FastAPI/app/domain/schemas/: queries.py
contrib/FastAPI/tests/: conftest.py  env_vars.py  test_conf.py
contrib/bigiq-collect/: README.md  bigIQCollect.sh  f5ttFsStart.sh  f5ttfs.py  nicfs.py  nicfsStart.sh  sampledata.tgz
contrib/bigiq-docker/: AIRGAPPED.md  README.md  f5tt-bigiq-docker.sh
contrib/docker-compose/: README.md  f5tt-compose-bigiq.yaml  (+2 more)
deprecated/: README.md
f5tt/: Dockerfile  app.py  bigiq.py  cveDB.py  f5tt.sh  f5ttCH.py  nicstart.sh  nms.py  requirements.txt
manifests/: 0.ns.yaml  1.f5tt.yaml  1.instancecounter.yaml  2.prometheus.yaml  3.grafana.yaml  4.pushgateway.yaml
nginx-instance-counter/: Dockerfile  app.py  bigiq.py  cveDB.py  nc.py  nicstart.sh  nim.py  nms.py
portable/: README.md
(+21 files in other folders)
